--- a/ressources.html
+++ b/ressources.html
@@ -1,38 +1,34 @@
 <!doctype html>
-
 <html>
-  <meta charset="utf8" />
-  <title>sql.js demo: Online SQL interpreter</title>
-  <script src="/sql-js/sql-wasm.js"></script>
-  <script>
-	  // Load sql.js WebAssembly file
-      config = {
-		locateFile: filename => "/sql-js/sql-wasm.js"
-	  }
-      // The `initSqlJs` function is globally provided by all of the main dist files if loaded in the browser.
-      // We must specify this locateFile function if we are loading a wasm file from anywhere other than the current html page's folder.
-      initSqlJs(config).then(function(SQL){	
-		console.log("sql.js initialized 🎉");
-		//Create the database
-		const db = new SQL.Database();
-		// Run a query without reading the results
-		db.run("CREATE TABLE test (col1, col2);");
-		// Insert two rows: (1,111) and (2,222)
-		db.run("INSERT INTO test VALUES (?,?), (?,?)", [1,111,2,222]);
+<!--Simple Read eval print loop for SQL-->
 
-		// Prepare a statement
-		const stmt = db.prepare("SELECT * FROM test WHERE col1 BETWEEN $start AND $end");
-		stmt.getAsObject({$start:1, $end:1}); // {col1:1, col2:111}
+<head>
+	<meta charset="utf8">
+	<title>SQL REPL</title>
+	<script src="sql-js/sql-wasm.js"></script>
+</head>
 
-		// Bind new values
-		stmt.bind({$start:1, $end:2});
-		while(stmt.step()) { //
-			const row = stmt.getAsObject();
-			console.log('Here is a row: ' + JSON.stringify(row));
-		}
-	  });
-  </script>
-  <body>
-    Output is in Javascript console
-  </body>
-</html>
+<body>
+	<input type='text' id='input' placeholder="ENTER SOME SQL" size='50'
+		value="CREATE TABLE test(val);INSERT INTO test VALUES (666); SELECT * FROM test">
+	<button id='submit'>Execute</button>
+	<pre id='result'></pre>
+	<pre id='error'></pre>
+	<script>
+
+		//Open a blank database
+		var db;
+		initSqlJs({ locateFile: filename => `sql-js/${filename}` }).then(function (SQL) {
+			db = new SQL.Database();
+		});
+
+		document.getElementById('submit').onclick = function () {
+			var sql = document.getElementById('input').value;
+			var result = '', error = '';
+			try { result = db.exec(sql); }
+			catch (e) { error = e; }
+			document.getElementById('result').innerHTML = JSON.stringify(result, null, '  ');
+			document.getElementById('error').innerHTML = error;
+		};
+	</script>
+</body>
